Modify Qubika work experience
* Delete css unnecessary property.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h2>Full-Stack Software Developer</h2>
           <div class="brief">
             <p>
-              Currently working full-time as a Software Developer at <a href="https://qubika.com/">Qubika</a> - <a href="https://moove-it.com/">Moove It</a>
+              Currently learning new staff to test my intelligence
             </p>
           </div>
         </div>
@@ -62,10 +62,10 @@
           </div>
           <div class="job-description">
             <h3>Software Developer</h3>
-            <h4>Aug 2022 - Present</h4>
+            <h4>Aug 2022 - Feb 2024</h4>
             <h4><a href="https://moove-it.com/" target="_blank">Moove It</a> - <a href="https://qubika.com/" target="_blank">Qubika</a></h4>
             <p>
-              Create landings for the Moove It's main page, also helping the Niños sin Dolor Foundation website.
+              Create landings for the Moove It's main website and helping the Niños sin Dolor Foundation website.
               Participating in workshops, taking new courses and improving my English vocabulary.
             </p>
           </div>
