Move assets to be inside media folder
* Modify path to images inside style and index files.

--- a/portfolio/luxury-presence/index.html
+++ b/portfolio/luxury-presence/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="shortcut icon" href="./media/images/favicon_io/favicon.ico"/>
+  <link rel="shortcut icon" href="./media/favicon_io/favicon.ico"/>
   <link rel="stylesheet" href="./style/style.css">
   <title>Luxury Presence | Marketing Plan</title>
 </head>
@@ -18,7 +18,7 @@
       <div class="d-flex custom-nav-list">
         <section class="logo">
           <div class="logo-image">
-            <img src="./media/images/luxury-presence.png" alt="logo">
+            <img src="./media/luxury-presence.png" alt="logo">
           </div>
         </section>
         <div class="nav-list">
@@ -153,7 +153,7 @@
     <section>
       <article class="d-flex custom-article">
         <figure>
-          <img src="./media/images/house-front-yard.jpg" alt="Houses' hall">
+          <img src="./media/house-front-yard.jpg" alt="Houses' hall">
         </figure>
         <div class="d-flex custom-div">
           <h2>
@@ -215,7 +215,7 @@
           </p>
         </div>
         <figure>
-          <img src="./media/images/beach-house.jpg" alt="Houses' hall">
+          <img src="./media/beach-house.jpg" alt="Houses' hall">
         </figure>
       </article>
     </section>
@@ -223,7 +223,7 @@
     <section class="blue-section">
       <article class="d-flex custom-article">
         <figure>
-          <img src="./media/images/hall.jpg" alt="Houses' hall">
+          <img src="./media/hall.jpg" alt="Houses' hall">
         </figure>
         <div class="d-flex custom-div">
           <h2>
@@ -279,7 +279,7 @@
           </p>
         </div>
         <figure>
-          <img src="./media/images/pool-house.jpg" alt="Houses' hall">
+          <img src="./media/pool-house.jpg" alt="Houses' hall">
         </figure>
       </article>
     </section>
@@ -290,7 +290,7 @@
     <section>
       <article class="d-flex custom-article">
         <figure>
-          <img src="./media/images/apartment-pool.jpg" alt="Houses' hall">
+          <img src="./media/apartment-pool.jpg" alt="Houses' hall">
         </figure>
         <div class="d-flex custom-div">
           <h2>
@@ -352,7 +352,7 @@
           </p>
         </div>
         <figure>
-          <img src="./media/images/house-inside.jpg" alt="Houses' hall">
+          <img src="./media/house-inside.jpg" alt="Houses' hall">
         </figure>
       </article>
     </section>
