Hide parallax images

--- a/portfolio/introduccion-ingenieria/index.html
+++ b/portfolio/introduccion-ingenieria/index.html
@@ -73,7 +73,7 @@
       </div>
     </section>
 
-    <section class="flex flex-col justify-center align-center mb-20">
+    <section class="hidden md:flex flex-col justify-center align-center mb-20">
       <section class="w-[100%] h-[25vh] object-cover bg-[url(assets/residuos-7.jpg)] bg-fixed rounded-[1rem]">
       </section>
       <section class="w-[100%] h-[25vh] object-cover bg-[url(assets/residuos-4.jpg)] bg-fixed mt-5 rounded-[1rem]">
