Modify margin on elements to avoid blank spaces

--- a/portfolio/introduccion-ingenieria/index.html
+++ b/portfolio/introduccion-ingenieria/index.html
@@ -56,7 +56,7 @@
   <main class="container mx-auto px-4 sm:px-6 lg:px-8 py-8">
 
     <section id="inicio"
-      class="h-screen w-full flex flex-col items-center justify-center text-center pb-20 scroll-mt-20">
+      class="h-screen w-full flex flex-col items-center justify-center text-center md:pb-20 scroll-mt-20">
       <div class="w-full h-[85%] relative bg-green-900 flex flex-col items-center justify-center rounded-[2rem]">
         <img
           class="h-20 md:h-24 xl:h-32 absolute top-[-20px] md:top-[-30px] xl:top-[-50px] left-[-10px] md:left-[-20px] xxl:left-[-50px] rotate-[0.1rad] animate-bounce"
@@ -83,7 +83,7 @@
     </section>
 
     <section id="presentacion"
-      class="mt-20 h-screen flex flex-col align-center justify-center text-center scroll-mt-20">
+      class="mt-4 mb-20 md:mt-20 md:mb-0 md:h-screen flex flex-col align-center justify-center text-center scroll-mt-20">
       <div class="flex flex-col md:flex-row justify-center text-center">
         <div class="m-2 py-4 flex-1 flex items-center rounded-lg shadow-lg border-t-4 border-green-700">
           <p class="md:text-xl p-4 xl:text-2xl text-slate-600 max-w-3xl mx-auto">
