--- a/portfolio/introduccion-ingenieria/index.html
+++ b/portfolio/introduccion-ingenieria/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="Angeles' icon" href="./assets/favicon_io/favicon.ico" />
-  <title>Acumulaciónn de Residuos Tecnológicos</title>
+  <title>Acumulación de Residuos Tecnológicos</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="./main.js"></script>
